# ares-aqua

./: README.md
code/base_mesh_node/: CMakeLists.txt  prj.conf
code/base_mesh_node/src/: main.c
code/lib/mpu_i2c/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  zephyr_i2c.c
code/lib/pb_driver/: s4589514_pb.c  s4589514_pb.h
code/lib/pwm_speaker_driver/: s4589514_speaker_pwm.c  s4589514_speaker_pwm.h
code/lib/rgb_led_driver/: s4589514_rgb_led.c  s4589514_rgb_led.h
code/lib/scu_sensors/: hal_imu.c  hal_imu.h  s4589514_ccs811.c  s4589514_ccs811.h  s4589514_hts221.c  s4589514_hts221.h  s4589514_lis2dh.c  s4589514_lis2dh.h  s4589514_lps22hb.c  s4589514_lps22hb.h
code/mobile_mesh_nodes/: CMakeLists.txt  prj.conf  thingy52_overlay.dtsi
code/mobile_mesh_nodes/conf_files/: mobile_node_A.conf  mobile_node_B.conf
code/mobile_mesh_nodes/src/: main.c
code/python_software/: BeaconData.csv  download_influxdb_training_data.py  newProject.py  project_training_collect.py  pylistener.py  pylistener_csv_beacon.py  pylistener_live_static.py
code/python_software/knn_tut_examples/: example.py  influxdb_test.py  knndata.csv  knntest1.py  online.py  read_influx.py  temp_train.py
code/static_mesh_relays/: CMakeLists.txt  prj.conf
code/static_mesh_relays/conf_files/: static_node_B.conf  static_node_C.conf  static_node_W.conf  static_node_X.conf  static_node_Y.conf  static_node_Z.conf
code/static_mesh_relays/src/: main.c
code/static_mobile_nodes/: CMakeLists.txt
code/static_mobile_nodes/conf_files/: static_node_A.conf  static_node_D.conf
code/static_mobile_nodes/inc/: main.h
code/static_mobile_nodes/src/: main.c
